--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.2.2"
+coil-compose = "2.2.0"
 droidlibs = "1.2.13"
 firebase-bom = "33.0.0"
 firebase-ui-auth = "7.2.0"
@@ -13,16 +14,24 @@ activity-compose = "1.9.0"
 compose-bom = "2023.08.00"
 google-service = "4.4.1"
 navigation-compose = "2.7.7"
+datastore-core = "1.0.0"
+gson = "2.10.1"
+koin-version = "3.5.3"
 
 [libraries]
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
 droidlibs-compose-android = { module = "com.github.The-Streamliners.DroidLibs:compose-android", version.ref = "droidlibs" }
+droidlibs-pickers = { module = "com.github.The-Streamliners.DroidLibs:pickers", version.ref = "droidlibs" }
+androidx-datastore-core = { module = "androidx.datastore: datastore-preferences-core", version.ref = "datastore-core"}
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
+firebase-storage = { module = "com.google.firebase:firebase-storage" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
 firebase-ui-auth = { module = "com.firebaseui:firebase-ui-auth", version.ref = "firebase-ui-auth" }
-
+gson = { module = "com.google.code.gson:gson", version.ref = "gson"}
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose"}
+koin-android = {module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-version"}
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -37,6 +46,7 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+material-icon-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
